2004-05-18  Brian Kahne  <bkahne@ibmoto.com>

	* A Result<T> object can now interface with an alt block by using
	ResChan<T>, which may be constructed directly from Result<T>.

	* I changed the architecture of how handles are returned.  A
	handle now lives in a thread, rather than as a single instance in
	a Processor.  When a thread terminates, it will now wake each
	waiter and set its handle to the terminating thread's handle.
	pSleep() then returns the current handle and it may be queried by
	calling pHandle().

	It may be necessary to expand this in the future to where the
	waiter queue stores a handle and a thread.  Right now, the
	limitation is that at most one alt block can wait on a channel.
	This is inline with how other channels work and doesn't apply to
	using Result directly, but we may want to expand it in the future.

	* Added support to spawn for handling function pointers and method
	pointers.  Spawn now supports the following ways to call a
	subroutine:

	1. Literal function call:       spawn(foo());
	2. Function pointer call:       p = foo; spawn(p());
	3. Method call w/reference:     spawn(a.b());
	4. Method call w/pointer:       spawn(a->b());
	5. Static method call:          spawn(A::b());
	6. Method pointer w/reference:  p = &A::b; spawn(a.*p());
	7. Method pointer w/pointer:    p = &A::b; spawn(a->*p());

2004-05-17  Brian Kahne  <bkahne@ibmoto.com>

	* Added support to spawn for handling member calls.

	* Initial implementation of spawn operator.  It currently only
	processes function calls.

	* Created Result template for storing data from a spawn operation.

2004-05-14  Brian Kahne  <bkahne@ibmoto.com>

	* Added pDone(const THandle), which returns true if the specified
	thread is finished.  

	* Added initial code to parser to parse spawn command.

	* Added C++-only spawn test to test spawn implementation concept.

2004-05-12  Brian Kahne  <bkahne@ibmoto.com>

	* Broke plasma.mc into multiple files.
