@@ -7,6 +7,8 @@
 #define _PLSMAA_H_
 
 #include <assert.h>
+#include <vector>
+#include <list>
 
 namespace plasma {
 
@@ -20,19 +22,51 @@ namespace plasma {
     void write(const Data &d);
     void set_notify(THandle t,int h) { assert(!_readt); _readt = t; _h = h; };
     THandle clear_notify() { THandle t = _readt; _readt = 0; return t; };
-    void set_writenotify(THandle t,int h) { assert(!_writet); _writet = t; _h = h; };
-    THandle clear_writenotify() { THandle t = _writet; _writet = 0; return t; };
     bool ready() const { return _ready; };
     void clear_ready() { _ready = false; };
     Data read() { return read_internal(false); };
     Data get() { return read_internal(true); };
   private:
+    void set_writenotify(THandle t) { assert(!_writet); _writet = t; };
+    THandle clear_writenotify() { THandle t = _writet; _writet = 0; return t; };
     Data read_internal(bool clear_ready);
 
     Data    _data;
     bool    _ready;
     THandle _readt;
     THandle _writet;
+    int     _h;
+  };
+
+  // Queued channel class:  The class may store either an arbitrary number of
+  // objects or a fixed number.  If a fixed number, a write will block if the
+  // channel is full.  This is designed for multiple producers to feed data to
+  // a single consumer.
+  template <class Data>
+  class QueueChan {
+    typedef std::list<Data>      Store;
+    typedef std::vector<THandle> Writers;
+  public:
+    QueueChan(int size = -1) : _maxsize(size), _size(0), _readt(0) {};
+    void write(const Data &d);
+    void set_notify(THandle t,int h) { assert(!_readt); _readt = t; _h = h; };
+    THandle clear_notify() { THandle t = _readt; _readt = 0; return t; };
+    bool ready() const { return !_store.empty(); };
+    int size() const { return _size; };
+    int maxsize() const { return _maxsize; };
+    void clear_ready() { pLock(); --_size; _store.pop_back(); pUnlock(); };
+    Data read() { return read_internal(false); };
+    Data get() { return read_internal(true); };
+  private:
+    void set_writenotify(THandle t) { _writers.push_back(t); };
+    THandle next_writer() { THandle t = _writers.back(); _writers.pop_back(); return t; };
+    Data read_internal(bool clear_ready);
+
+    int     _maxsize;   // Max size.  If -1, no fixed size.
+    int     _size;      // Current size of queue.
+    Store   _store;
+    THandle _readt;     // A blocked read thread.
+    Writers _writers;   // One or more blocked writers.
     int     _h;
   };
 
@@ -66,6 +100,8 @@ namespace plasma {
   //
   //////////////////////////////////////////////////////////////////////////////
 
+  /////////////// Channel ///////////////
+
   template <class Data>
   Data Channel<Data>::read_internal(bool clearready)
   {
@@ -90,7 +126,7 @@ namespace plasma {
   { 
     pLock();
     if (_ready) {
-      set_writenotify(pCurThread(),0);
+      set_writenotify(pCurThread());
       pSleep();
     }
     _data = d;
@@ -100,6 +136,53 @@ namespace plasma {
     }
     pUnlock();
   };
+
+  /////////////// QueueChan ///////////////
+
+  template <class Data>
+  Data QueueChan<Data>::read_internal(bool clearready)
+  {
+    pLock();
+    // If no data- sleep until we get some.
+    if (!ready()) {
+      set_notify(pCurThread(),0);
+      pSleep();
+    }
+    // If there's a waiting writer (queue is full) and we're
+    // going to remove an item, then unblock the next writer here.
+    if (_writers.size() && clearready) {
+      pAddReady(next_writer());
+    }
+    Data temp = _store.back();
+    if (clearready) {
+      clear_ready();
+    }
+    pUnlock();
+    return temp;
+  }
+
+  template <class Data>
+  void QueueChan<Data>::write(const Data &d) 
+  { 
+    pLock();
+    // Sleep if queue is full.  This is a loop so that if a waiting
+    // writer is awakened and then another thread jumps in and writess
+    // data to again fill the queue, the thread will again sleep.
+    while (_maxsize >= 0 && _size >= _maxsize) {
+      set_writenotify(pCurThread());
+      pSleep();
+    }
+    _store.push_front(d);
+    ++_size;
+    assert(_maxsize < 0 || _size <= _maxsize);
+    // Wake a sleeping reader.
+    if (_readt) {
+      pWake(clear_notify(),_h);
+    }
+    pUnlock();
+  };
+
+  /////////////// ResChan ///////////////
 
   template <class Data>
   void ResChan<Data>::set_notify(THandle t,int h) 
